fix contact header alignment

--- a/astro/src/styles/Contact.module.scss
+++ b/astro/src/styles/Contact.module.scss
@@ -1,4 +1,4 @@
-header {
+.contactHeader {
     max-width: 500px;
     margin: 0 auto;
 }
